# Flexible-note

./: .gitignore  VECTOR_SEARCH_README.md  app.py  config.py  llm_service.py  main.py  models.py  pyproject.toml  readme.md  run.bat  run.sh  run_uv.py  utils.py  vector_service.py
blueprints/: attachment_routes.py  batch_routes.py  llm_routes.py  main_routes.py  relation_routes.py  search_routes.py  segment_routes.py  session_routes.py  statistics_routes.py  tag_routes.py  utility_routes.py  vector_db_routes.py
knowledge_system/: .gitignore  app.py  pyproject.toml
knowledge_system/migrations/versions/: 8fc808661254_initial_database_schema_includes_.py
knowledge_system/static/css/: style.css
knowledge_system/static/js/: main.js
knowledge_system/templates/: base.html  index.html  search.html  session_detail.html  session_edit_form.html  tag_management.html
services/: search_service.py
static/css/: style.css
static/js/: main.js  relation-graph.js
templates/: 404.html  500.html  base.html  batch_operations.html  index.html  llm_course_create.html  search.html  semantic_search.html  session_detail.html  session_form.html  statistics.html  tag_management.html  test_upload.html
